GS-11960 HOTFIX: Mega Menu fixed wrap issue in FF4

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -5017,14 +5017,14 @@ body.cobranded #pageGS {
     padding: 0 18px;
 }
 
-/* FireFox Specific */
+/* FireFox Default */
 .mac.ff #primary .menuItem .noDrop,
 .mac.ff #primary .menuItem .drop {
     padding: 0 19px;
 }
 
 .mac.ff #primary .menuItem.lastNavUnit .menuItemAnchorText{
-    padding: 0 18px;
+    padding: 0 17px;
 }
 
 .win.ff #primary .menuItem .noDrop,
@@ -5036,7 +5036,18 @@ body.cobranded #pageGS {
     padding: 0 21px;
 }
 
-/* Chrome Specific */
+/* FireFox4 Specific */
+
+.win.ff4 #primary .menuItem .noDrop,
+.win.ff4 #primary .menuItem .drop {
+    padding: 0 19px;
+}
+
+.win.ff4 #primary .menuItem.lastNavUnit .menuItemAnchorText{
+    padding: 0 17px;
+}
+
+/* Chrome Default */
 .mac.chrome #primary .menuItem .noDrop,
 .mac.chrome #primary .menuItem .drop {
     padding: 0 18px;
@@ -5055,7 +5066,7 @@ body.cobranded #pageGS {
     padding: 0 21px;
 }
 
-/* Safari Specific */
+/* Safari Default */
 .mac.safari #primary .menuItem .noDrop,
 .mac.safari #primary .menuItem .drop {
     padding: 0 18px;
@@ -5078,6 +5089,16 @@ body.cobranded #pageGS {
 .ie #primary .menuItem .noDrop,
 .ie #primary .menuItem .drop {
     padding: 0 19px;
+}
+
+/* IE10 Specific */
+body.ie10 #primary .menuItem .noDrop,
+body.ie10 #primary .menuItem .drop {
+    padding: 0 19px;
+}
+
+body.ie10 #primary .menuItem.lastNavUnit .menuItemAnchorText{
+    padding: 0 18px;
 }
 
 /* IE9 Specific */
@@ -5167,10 +5188,12 @@ body.cobranded #pageGS {
     position: relative;
     margin-left: 0;
     margin-right: 0;
+    zoom:1;
 }
 
 .col_1 {
     width: 50%;
+    *width:49%;
 }
 
 .col_2 {
@@ -5465,6 +5488,15 @@ a:hover .i-pn-bts {
 .win.ff .dropdown_5 a .i-sn-arrow-on {top:-18px;left:119px;}
 .win.ff .dropdown_6 a .i-sn-arrow-on {top:-18px;left:128px;}
 
+body.win.ff.ff4 .dropdown_1 a .i-sn-arrow-on {top:-18px;left:77px;}
+body.win.ff.ff4 .dropdown_2 a .i-sn-arrow-on {top:-18px;left:146px;}
+body.win.ff.ff4 .dropdown_3 a .i-sn-arrow-on {top:-18px;left:108px;}
+body.win.ff.ff4 .dropdown_4 a .i-sn-arrow-on {top:-18px;left:133px;}
+body.win.ff.ff4 .dropdown_5 a .i-sn-arrow-on {top:-18px;left:120px;}
+body.win.ff.ff4 .dropdown_6 a .i-sn-arrow-on {top:-18px;left:129px;}
+
+.win.ff3 .dropdown_1 a .i-sn-arrow-on {top:-18px;left:79px;}
+
 /* Chrome Specific */
 .mac.chrome .dropdown_1 a .i-sn-arrow-on {top:-19px;left:79px;}
 .mac.chrome .dropdown_2 a .i-sn-arrow-on {top:-19px;left:152px;}
@@ -5472,7 +5504,7 @@ a:hover .i-pn-bts {
 .mac.chrome .dropdown_4 a .i-sn-arrow-on {top:-19px;left:133px;}
 .mac.chrome .dropdown_5 a .i-sn-arrow-on {top:-19px;left:121px;}
 .mac.chrome .dropdown_6 a .i-sn-arrow-on {top:-19px;left:130px;}
-.win.chrome .dropdown_1 a .i-sn-arrow-on {top:-18px;left:78px;}
+.win.chrome .dropdown_1 a .i-sn-arrow-on {top:-18px;left:79px;}
 .win.chrome .dropdown_2 a .i-sn-arrow-on {top:-18px;left:150px;}
 .win.chrome .dropdown_3 a .i-sn-arrow-on {top:-18px;left:107px;}
 .win.chrome .dropdown_4 a .i-sn-arrow-on {top:-18px;left:133px;}
@@ -5486,7 +5518,7 @@ a:hover .i-pn-bts {
 .mac.safari .dropdown_4 a .i-sn-arrow-on {top:-19px;left:133px;}
 .mac.safari .dropdown_5 a .i-sn-arrow-on {top:-19px;left:121px;}
 .mac.safari .dropdown_6 a .i-sn-arrow-on {top:-19px;left:130px;}
-.win.safari .dropdown_1 a .i-sn-arrow-on {top:-18px;left:78px;}
+.win.safari .dropdown_1 a .i-sn-arrow-on {top:-18px;left:79px;}
 .win.safari .dropdown_2 a .i-sn-arrow-on {top:-18px;left:150px;}
 .win.safari .dropdown_3 a .i-sn-arrow-on {top:-18px;left:107px;}
 .win.safari .dropdown_4 a .i-sn-arrow-on {top:-18px;left:133px;}
@@ -5501,8 +5533,16 @@ a:hover .i-pn-bts {
 .ie .dropdown_5 a .i-sn-arrow-on {top:-19px;left:121px;}
 .ie .dropdown_6 a .i-sn-arrow-on {top:-19px;left:129px;}
 
+/* IE10 Specific */
+body.ie10 .dropdown_1 a .i-sn-arrow-on {top:-19px;left:79px;}
+body.ie10 .dropdown_2 a .i-sn-arrow-on {top:-19px;left:146px;}
+body.ie10 .dropdown_3 a .i-sn-arrow-on {top:-19px;left:108px;}
+body.ie10 .dropdown_4 a .i-sn-arrow-on {top:-19px;left:133px;}
+body.ie10 .dropdown_5 a .i-sn-arrow-on {top:-19px;left:120px;}
+body.ie10 .dropdown_6 a .i-sn-arrow-on {top:-19px;left:129px;}
+
 /* IE9 Specific */
-.ie9 .dropdown_1 a .i-sn-arrow-on {top:-19px;left:77px;}
+.ie9 .dropdown_1 a .i-sn-arrow-on {top:-19px;left:78px;}
 .ie9 .dropdown_2 a .i-sn-arrow-on {top:-19px;left:147px;}
 .ie9 .dropdown_3 a .i-sn-arrow-on {top:-19px;left:108px;}
 .ie9 .dropdown_4 a .i-sn-arrow-on {top:-19px;left:132px;}
@@ -5510,7 +5550,7 @@ a:hover .i-pn-bts {
 .ie9 .dropdown_6 a .i-sn-arrow-on {top:-19px;left:129px;}
 
 /* IE8 Specific */
-.ie8 .dropdown_1 a .i-sn-arrow-on {top:-18px;left:78px;}
+.ie8 .dropdown_1 a .i-sn-arrow-on {top:-18px;left:79px;}
 .ie8 .dropdown_2 a .i-sn-arrow-on {top:-18px;left:150px;}
 .ie8 .dropdown_3 a .i-sn-arrow-on {top:-18px;left:107px;}
 .ie8 .dropdown_4 a .i-sn-arrow-on {top:-18px;left:133px;}
